# BlendDC-MCP

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build_addon.py  pyproject.toml
addon/: blender_mcp.py
addon/blenddc_mcp/: __init__.py  bay_tools.py  cable_tools.py  constants.py  core.py  discovery.py  equipment_tools.py  export_tools.py  facility_tools.py  gn_tools.py  material_tools.py  mesh_tools.py  polish_tools.py  rack_tools.py  server.py  variation_tools.py
addon/universal_blender_mcp/: __init__.py  constants.py  export_tools.py  gn_tools.py  rack_tools.py  rag_store.py  server.py
docs/: tool_reference.md
server/: main.py  tools.py
tests/: full_pipeline_test.py  full_uptime_pipeline_test.py  pipeline_test.py  uptime_pipeline_test.py
