[project]
name = "universal-blender-mcp"
version = "1.4.1"
description = "Universal MCP server for Blender — works with any LLM frontend"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "uvicorn[standard]",
]

[tool.uv]
dev-dependencies = ["black", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
