[project]
name = "blenddcmcp"
version = "3.0.0"
description = "Datacenter asset factory for UPTIME — 198-tool MCP server for Blender"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "uvicorn[standard]",
]

[tool.uv]
dev-dependencies = ["black", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
